apps/external-monitoring/external-grafana/network.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-grafana
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: external-grafana
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-grafana
  namespace: external-monitoring
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Redirect root to kiosk mode
      if ($request_uri = /) {
        rewrite ^/$ /?kiosk redirect;
      }
      # redirect admin and user-facing pages
      if ($request_uri ~ "^/(login|signup|admin|profile|org|dashboard|datasources|plugins|users|teams|playlists|alerting|explore|d/)") {
        return 301 /?kiosk;
      }
      
spec:
  ingressClassName: external

  tls:
  - hosts:
    - monitoring.jwschman.com
  rules:
  - host: monitoring.jwschman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: external-grafana
            port:
              number: 80
